--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,20 +2,20 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   font-family: effra, sans-serif;
   background-color: #f7f7f7;
   height: max-content;
-  box-sizing: border-box;
 }
 
-/*Contenedores principales*/
+/*Contenedor principales*/
 
 .masterContainer {
   display: grid;
-  grid-template-rows: 110px 1fr 1fr 1fr 150px max-content;
+  grid-template-rows: 6% 1fr 1fr 1fr 10% max-content;
   grid-template-columns: max-content max-content;
   grid-template-areas:
     "nav nav"
@@ -29,48 +29,15 @@ body {
   justify-content: center;
 }
 
-/*Barra superior*/
-
-.topbarContainer {
-  width: 100vw;
-  background-color: #f7f7f7;
-  display: grid;
+/*Barra superior Bootstrap*/
+#NavbarB {
   grid-area: nav;
-  grid-template-columns: max-content max-content;
-  position: fixed;
-  z-index: 100;
-  align-content: center;
-  justify-content: center;
+  background-color: #f7f7f7;
+  width: 100vw;
 }
 
-.site-id {
-  grid-column-start: 1;
-  display: flex;
-  grid-column-end: 2;
-  padding: 0px 0px 0px 50px;
-  flex-direction: row;
-  width: max-content;
-}
-
-.nav {
-  display: flex;
-  grid-column-start: 2;
-  align-items: center;
-  margin-left: 130px;
-}
-
-.listNav {
-  display: flex;
-}
-
-.listNavItem {
-  margin-left: 30px;
-  margin-right: 30px;
-  padding: 0;
-}
-
-.logoSiete {
-  width: 100px;
+#contenedorInternoNavBar {
+  width: 100vw;
 }
 
 /*Mensaje de bienvenida*/
@@ -247,7 +214,7 @@ ul {
 
 li {
   display: inline-block;
-  padding-left: 80px;
+  padding: 1rem;
 }
 
 a {
@@ -299,7 +266,7 @@ video {
   text-decoration: none;
   display: inline-block;
   margin-top: 30px;
-  width: 130px;
+  width: 12rem;
   font-weight: 100;
 }
 
@@ -329,7 +296,7 @@ video {
 
 .masterContainerNuestroTrabajo {
   display: grid;
-  grid-template-rows: 110px 400px max-content 150px 150px;
+  grid-template-rows: 12% 400px max-content 10% 12%;
   grid-template-columns: max-content max-content;
   grid-template-areas:
     "nav nav"
@@ -472,7 +439,7 @@ form {
 @media all and (max-width: 955px) {
   .masterContainer {
     display: grid;
-    grid-template-rows: 94px 575px 575px 575px 150px 185px;
+    grid-template-rows: 155px 575px 575px 575px 8% 10%;
     grid-template-columns: 1fr;
     grid-template-areas:
       "nav"
@@ -565,7 +532,7 @@ form {
 @media all and (max-width: 600px) {
   .masterContainer {
     display: grid;
-    grid-template-rows: 94px 575px 575px 575px 150px 185px;
+    grid-template-rows: 94px 575px 575px 575px 8% 185px;
     grid-template-columns: 1fr;
     grid-template-areas:
       "nav"
